@@ -51,6 +51,11 @@
 	* examples/simpleExamples.tcl: a demo
 	* doc/vfslib.n: some documentation on the 'library' code.
 	
+2002-02-17  Vince Darley <vincentdarley@sourceforge.net>
+	* generic/vfs.c: updated for TIP#72 application to cvs head.
+	The 'file stat' implementation now deals with files of size
+	greater than a 32 bit representation.
+
 2001-10-29  Vince Darley <vincentdarley@sourceforge.net>
         * win/makefile.vc: installation is better.
 	* library/vfsUrl.tcl: improved urltype mounting.  The following
